# JC-DAV

./: .gitignore  CHANGELOG.md  CMakeLists.txt  binding.gyp  package.json  tsconfig.json
.github/: cp.js  rm.js
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake
lib/: index.d.ts  index.ts  test.ts  vad.d.ts  vad.node
native/: CMakeLists.txt  vad.cc  vad.h  webrtcvad.cc
native/webrtc/rtc_base/: checks.cc
